<resources>
    <string name="app_name">Sunny Bnb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_settings">Log Out</string>

    <string name="recent_news">Summer 2017</string>
    <string name="in_news">mpla mpla</string>
    <string name="publish_date">2017-04-30 12:13:14</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="topDestinations">Top Destinations</string>
    <string name="messages">Messages</string>
    <string name="allCities">All Cities</string>
    <string name="settings">Settings</string>
    <string name="logIn">Log In</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_starting">StartingActivity</string>

    <string name="facebook_application_id" translatable="false">142585292966099</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_status">User Status</string>
    <string name="pref_default_status">Hi Im using sunnybnb!</string>

    <string name="pref_title_add_friends_to_messages">Add friendsList to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="users">USERS</string>
    <string name="number_of_houses">Number Of Houses:</string>
    <string name="user_settings">User Settings</string>
    <string name="house_name">House Name:</string>
    <string name="description">Description</string>
    <string name="add_a_house">Add A House</string>
    <string name="services">Provided Services</string>
    <string name="description2">Description:</string>
    <string name="price">Price:</string>
    <string name="country">Country:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="number_of_guests">Number Of Guests:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="open_map">Open Map</string>
    <string name="title_activity_staring">StaringActivity</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="remove_friend">Unfriend</string>
    <string name="friendsList">Friends</string>
    <string name="send_direct_message">Send Direct Message</string>
    <string name="reservations">Reservations</string>
    <string name="address">Address</string>
    <string name="title_activity_maps">Map</string>
</resources>
