<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            tools:context="com.example.ptuxiaki.sunnybnb.ui.Profile.ProfileActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileCircleImage"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/default_profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileDisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileCircleImage"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Display Name"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileCircleImage" />

            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileDisplayName"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Hello Im using SunnyBNB for android"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileDisplayName" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileStatus"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileStatus"
                app:srcCompat="@drawable/ic_home_white_24px" />

            <TextView
                android:id="@+id/homesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/number_of_houses"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <TextView
                android:id="@+id/profileHouseCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/homesTv"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/homesTv"
                app:layout_constraintStart_toEndOf="@+id/homesTv"
                tools:layout_editor_absoluteY="584dp" />

            <ImageView
                android:id="@+id/profile_visitors_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/ic_supervisor_account_white_24px" />

            <TextView
                android:id="@+id/visitorsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Number Of Visitors:"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_visitors_img"
                app:layout_constraintStart_toEndOf="@+id/profile_visitors_img"
                app:layout_constraintTop_toTopOf="@+id/profile_visitors_img" />

            <TextView
                android:id="@+id/profileVisitorsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/profileFriendsCounter"
                app:layout_constraintTop_toTopOf="@+id/friendsList" />

            <ImageView
                android:id="@+id/profile_friends_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_visitors_img"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_visitors_img"
                app:srcCompat="@drawable/ic_network" />

            <TextView
                android:id="@+id/friendsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Number Of Friends:"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_friends_img"
                app:layout_constraintStart_toEndOf="@+id/profile_friends_img"
                app:layout_constraintTop_toTopOf="@+id/profile_friends_img" />

            <TextView
                android:id="@+id/profileFriendsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/profileHouseCounter"
                app:layout_constraintTop_toTopOf="@+id/visitorsTV" />

            <Button
                android:id="@+id/profile_settings_btn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friendsList"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/fui_errorColor"
                android:onClick="settingsActivity"
                android:text="@string/user_settings"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/friendsList" />

            <Button
                android:id="@+id/profile_send_friend_request_btn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/fui_bgTwitter"
                android:padding="16dp"
                android:text="@string/send_friend_request"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_settings_btn"
                app:layout_goneMarginTop="32dp" />

            <Button
                android:id="@+id/profile_decline_friend_request_btn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/material_red_a200"
                android:padding="16dp"
                android:text="@string/decline_request"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/profile_send_friend_request_btn"
                app:layout_constraintStart_toStartOf="@+id/profile_send_friend_request_btn"
                app:layout_constraintTop_toBottomOf="@+id/profile_send_friend_request_btn"
                app:layout_goneMarginTop="32dp" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</RelativeLayout>

